--- a/checkout.html
+++ b/checkout.html
@@ -16,6 +16,10 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
 		integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
+	
+	<!-- Custom CSS-->
+	<link rel="stylesheet" href="css/styles.css">
+
 
 </head>
 
@@ -23,7 +27,7 @@
 	<!-- Navigation-->
 	<nav class="navbar py-3 py-lg-0 navbar-light bg-light navbar-expand-lg" id="navbar-example2">
 		<div class="container d-flex">
-			<a class="navbar-brand" href="#!">ShopNow</a>
+			<a class="navbar-brand" href="index.html">ShopNow</a>
 			<div class="d-flex flex-row order-lg-last align-items-center">
 
 				<button type="button" class="navbar-toggler order-last collapsed" data-bs-toggle="collapse"
@@ -32,7 +36,7 @@
 				</button>
 				<ul class="navbar-nav me-3 me-lg-0 d-flex flex-row align-items-center">
 					<li class="dropdown search-dropdown nav-item py-lg-3">
-						<a href="javascript:void(0)" class="btn btn-outline-dark flex-center" type="button"
+						<a href="javascript:void(0)" class="btn custom-primary-button flex-center" type="button"
 							data-bs-toggle="modal" data-bs-target="#cartModal" onclick="open_modal()"
 							data-bs-auto-close="outside">
 							<i class="fas fa-shopping-cart me-1"></i> Cart <span
@@ -59,6 +63,7 @@
 			</div>
 		</div>
 	</nav>
+
 	<div class="container">
 		<h1 class="text-center head m-4">Checkout Page</h1>
 
@@ -79,6 +84,8 @@
 				<h3 class="my-3 bord shadow text-center"><i class="fas fa-stopwatch p-2"></i>Delivery on time</h3>
 			</div>
 		</div>
+
+
 		<form class="form">
 			<div class="row bord p-5 shadow m-5">
 				<div class="col-sm-6">
@@ -126,7 +133,7 @@
 					</div>
 				</div>
 				<div class="col-12 mt-4 final">
-					<button type="submit" id="btn" class="p-2 px-4 btn btn-primary shadow-lg" onclick="validate()">
+					<button type="submit" id="btn" class="p-2 px-4 btn custom-primary-button shadow" onclick="validate2()">
 						<i class="fas fa-cart-arrow-down p-2"></i>Save
 					</button>
 				</div>
@@ -137,9 +144,9 @@
 
 
 	<!-- Footer-->
-	<footer class="py-3 bg-dark">
+	<footer class="py-3 bg-light">
 		<div class="container">
-			<p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p>
+			<p class="m-0 text-center">Copyright &copy; ShopNow 2024</p>
 		</div>
 	</footer>
 
@@ -159,7 +166,7 @@
 							<h3 class="text-center bill px-5">Select Something</h3>
 						</div>
 						<div class="text-center">
-							<a href="checkout.html" class="btn btn-primary m-3">Checkout</a>
+							<a href="checkout.html" class="btn custom-primary-button m-3">Checkout</a>
 						</div>
 					</div>
 				</div>
@@ -174,6 +181,7 @@
 
 
 	<!-- Core theme JS-->
+	<script src="js/products.js"></script>
 	<script src="js/shop.js"></script>
 	<script src="js/checkout.js"></script>
 </body>
