--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							data-bs-toggle="modal" data-bs-target="#cartModal" onclick="open_modal()"
 							data-bs-auto-close="outside">
 							<i class="fas fa-shopping-cart me-1"></i> Cart <span
-								class="badge bg-dark text-white ms-1 rounded-pill" id="count_product">0</span>
+								class="badge bg-dark text-white ms-1 rounded-pill" id="count_product"></span>
 						</a>
 					</li>
 				</ul>
@@ -252,6 +252,7 @@
 					<table class="table">
 						<thead>
 							<tr>
+								<th scope="col"></th>
 								<th scope="col">Product</th>
 								<th scope="col">Price</th>
 								<th scope="col">Qty.</th>
