--- a/checkout.html
+++ b/checkout.html
@@ -50,13 +50,13 @@
 
 				<ul class="navbar-nav me-auto mb-4 mb-lg-0 ms-lg-5">
 					<li class="nav-item">
-						<a class="nav-link" href="#grocery"><i class="fas fa-shopping-basket"></i> Grocery</a>
+						<a class="nav-link" href="index.html#grocery"><i class="fas fa-shopping-basket"></i> Grocery</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#beauty"><i class="fas fa-heart"></i> Beauty</a>
+						<a class="nav-link" href="index.html#beauty"><i class="fas fa-heart"></i> Beauty</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#clothes"><i class="fas fa-tshirt"></i> Clothes</a>
+						<a class="nav-link" href="index.html#clothes"><i class="fas fa-tshirt"></i> Clothes</a>
 					</li>
 
 				</ul>
@@ -86,26 +86,26 @@
 		</div>
 
 
-		<form class="form">
+		<form class="form" novalidate>
 			<div class="row bord p-5 shadow m-5">
 				<div class="col-sm-6">
 					<div class="mt-3">
 						<label for="fName" class="form-label">First Name:</label>
-						<input id="fName" class="form-control ml-3" type="text" placeholder="First Name" />
+						<input id="fName" class="form-control ml-3" type="text" placeholder="First Name"  minlength="3" required/>
 						<div id="errorName" class="invalid-feedback">This field is required and must have, at least, 3
 							characters
 						</div>
 					</div>
 					<div class="mt-3 ">
 						<label for="fEmail" class="form-label">Email:</label>
-						<input id="fEmail" class="form-control ml-3" type="email" placeholder="Email" minlength="3" />
+						<input id="fEmail" class="form-control ml-3" type="email" placeholder="Email" minlength="3" required/>
 						<div id="errorEmail" class="invalid-feedback">This field is required and must contain an '@' and
 							have, at
 							least, 3 characters</div>
 					</div>
 					<div class="mt-3 ">
 						<label for="fAddress" class="form-label">Address:</label>
-						<input id="fAddress" class="form-control" type="text" placeholder="Address" minlength="3" />
+						<input id="fAddress" class="form-control" type="text" placeholder="Address" minlength="3" required/>
 						<div id="errorAddress" class="invalid-feedback">This field is required and must have, at least,
 							3 characters
 						</div>
@@ -114,7 +114,7 @@
 				<div class="col-sm-6">
 					<div class="mt-3">
 						<label for="fLastN" class="form-label">Last Name:</label>
-						<input id="fLastN" class="form-control" type="text" placeholder="Last Name" minlength="3" />
+						<input id="fLastN" class="form-control" type="text" placeholder="Last Name" minlength="3" required/>
 						<div id="errorLastN" class="invalid-feedback">This field is required and must have, at least, 3
 							characters
 						</div>
@@ -122,18 +122,18 @@
 					<div class="mt-3">
 						<label for="fPassword" class="form-label">Password:</label>
 						<input id="fPassword" class="form-control" title="(4-8 characters)" type="password"
-							minlength="4" maxlength="8" placeholder="Password" />
-						<div id="errorPassword" class="invalid-feedback">Enter a correct password</div>
+							minlength="3" maxlength="8" placeholder="Password" required/>
+						<div id="errorPassword" class="invalid-feedback">Enter a correct password (at least, 3, with caracthers and numbers)</div>
 					</div>
 					<div class="mt-3">
 						<label for="fPhone" class="form-label">Phone Number:</label>
-						<input id="fPhone" class="form-control" type="number" placeholder="Phone No." />
+						<input id="fPhone" class="form-control" type="text" step="1" minlength="3" maxlength="9" placeholder="Phone No." required/>
 						<div id="errorPhone" class="invalid-feedback">Invalid phone number!! Must be 9 digits with no
 							letters</div>
 					</div>
 				</div>
 				<div class="col-12 mt-4 final">
-					<button type="submit" id="btn" class="p-2 px-4 btn custom-primary-button shadow" onclick="validate2()">
+					<button type="submit" id="btnSubmit" class="p-2 px-4 btn custom-primary-button shadow" onclick="validate()">
 						<i class="fas fa-cart-arrow-down p-2"></i>Save
 					</button>
 				</div>
@@ -142,6 +142,27 @@
 
 	</div>
 
+
+
+
+	<!--Modal-->
+
+	<div class="modal" tabindex="-1" id="successModal">
+		<div class="modal-dialog">
+		  <div class="modal-content">
+			<div class="modal-header" style="background-color: rgb(29, 242, 82);">
+			  <h5 class="modal-title">Checkout done</h5>
+			  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+			  <h5>Your checkout has been completed correctly.</h5>
+			</div>
+		  </div>
+		</div>
+	  </div>
+
+
+	
 
 	<!-- Footer-->
 	<footer class="py-3 bg-light">
