--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 								<th scope="col">Product</th>
 								<th scope="col">Price</th>
 								<th scope="col">Qty.</th>
-								<th scope="col">Total <small>(with discount)</small></th>
+								<th scope="col">Total <br><small>(with discount)</small></th>
 							</tr>
 						</thead>
 						<tbody id="cart_list">
