--- a/index.html
+++ b/index.html
@@ -253,10 +253,11 @@
 						<thead>
 							<tr>
 								<th scope="col"></th>
+								<th scope="col"></th>
 								<th scope="col">Product</th>
 								<th scope="col">Price</th>
 								<th scope="col">Qty.</th>
-								<th scope="col">Total <br><small>(with discount)</small></th>
+								<th scope="col">Total<small>(with discount)</small></th>
 							</tr>
 						</thead>
 						<tbody id="cart_list">
